// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ecl-notification renders correctly in the information variant 1`] = `
<ecl-notification close-label="Close" ecl-script="" message-title="Title for a message" variant="information">
  <!---->
  <div class="ecl-notification ecl-notification--info" data-ecl-notification role="alert">
    <ecl-icon style-class="ecl-notification__icon sc-ecl-notification-ec">
      <svg class="ecl-icon ecl-icon--m ecl-notification__icon sc-ecl-notification-ec">
        <use xlink:href="/build/images/ec/icons.svg#information"></use>
      </svg>
    </ecl-icon>
    <div class="ecl-notification__content">
      <ecl-button data-ecl-notification-close style-class="ecl-notification__close sc-ecl-notification-ec">
        <!---->
        <button class="ecl-button ecl-button--icon-only ecl-button--tertiary ecl-notification__close sc-ecl-notification-ec" data-ecl-notification-close="eclNotificationClose" type="button">
          <span class="ecl-button__container">
            <span class="ecl-button__label" data-ecl-label>
              Close
            </span>
            <ecl-icon slot="icon-after" style-class="ecl-button__icon">
              <svg class="ecl-button__icon ecl-icon ecl-icon--xs sc-ecl-button-ec">
                <use xlink:href="/build/images/ec/icons.svg#close"></use>
              </svg>
            </ecl-icon>
          </span>
        </button>
      </ecl-button>
      <div class="ecl-notification__description">
        Lorem ipsum dolor sit amet
      </div>
      <div class="ecl-notification__link sc-ecl-notification-ec">
        <ecl-link path="/example.html" slot="notification-link">
          <!---->
          <a class="ecl-link ecl-link--default ecl-notification__link sc-ecl-notification-ec" href="/example.html">
            Lorem ipsum
            <slot-fb name="icon-after"></slot-fb>
          </a>
        </ecl-link>
      </div>
    </div>
  </div>
</ecl-notification>
`;

exports[`ecl-notification renders correctly in the success variant 1`] = `
<ecl-notification close-label="Close" ecl-script="" message-title="Title for a message" variant="success">
  <!---->
  <div class="ecl-notification ecl-notification--success" data-ecl-notification role="alert">
    <ecl-icon style-class="ecl-notification__icon sc-ecl-notification-ec">
      <svg class="ecl-icon ecl-icon--m ecl-notification__icon sc-ecl-notification-ec">
        <use xlink:href="/build/images/ec/icons.svg#check-filled"></use>
      </svg>
    </ecl-icon>
    <div class="ecl-notification__content">
      <ecl-button data-ecl-notification-close style-class="ecl-notification__close sc-ecl-notification-ec">
        <!---->
        <button class="ecl-button ecl-button--icon-only ecl-button--tertiary ecl-notification__close sc-ecl-notification-ec" data-ecl-notification-close="eclNotificationClose" type="button">
          <span class="ecl-button__container">
            <span class="ecl-button__label" data-ecl-label>
              Close
            </span>
            <ecl-icon slot="icon-after" style-class="ecl-button__icon">
              <svg class="ecl-button__icon ecl-icon ecl-icon--xs sc-ecl-button-ec">
                <use xlink:href="/build/images/ec/icons.svg#close"></use>
              </svg>
            </ecl-icon>
          </span>
        </button>
      </ecl-button>
      <div class="ecl-notification__description">
        Lorem ipsum dolor sit amet
      </div>
      <div class="ecl-notification__link sc-ecl-notification-ec">
        <ecl-link path="/example.html" slot="notification-link">
          <!---->
          <a class="ecl-link ecl-link--default ecl-notification__link sc-ecl-notification-ec" href="/example.html">
            Lorem ipsum
            <slot-fb name="icon-after"></slot-fb>
          </a>
        </ecl-link>
      </div>
    </div>
  </div>
</ecl-notification>
`;

exports[`ecl-notification renders correctly without the close button 1`] = `
<ecl-notification message-title="Title for a message" variant="information" with-close="false">
  <!---->
  <div class="ecl-notification ecl-notification--info" data-ecl-notification role="alert">
    <ecl-icon style-class="ecl-notification__icon sc-ecl-notification-ec">
      <svg class="ecl-icon ecl-icon--m ecl-notification__icon sc-ecl-notification-ec">
        <use xlink:href="/build/images/ec/icons.svg#information"></use>
      </svg>
    </ecl-icon>
    <div class="ecl-notification__content">
      <div class="ecl-notification__description">
        Lorem ipsum dolor sit amet
      </div>
      <div class="ecl-notification__link sc-ecl-notification-ec">
        <ecl-link path="/example.html" slot="notification-link">
          <!---->
          <a class="ecl-link ecl-link--default ecl-notification__link sc-ecl-notification-ec" href="/example.html">
            Lorem ipsum
            <slot-fb name="icon-after"></slot-fb>
          </a>
        </ecl-link>
      </div>
    </div>
  </div>
</ecl-notification>
`;
